ensure CC month fields get left padded with zeros [touch:5449] add css class to CC month and year dropdowns [touch:5449] make sure CC month and year fields don't get set too wide by themes [touch:5449] cast CC month and year values as strings [touch:5449] add check for array before using isset [touch:5449]

--- a/modules/single_page_checkout/assets/single_page_checkout.css
+++ b/modules/single_page_checkout/assets/single_page_checkout.css
@@ -618,3 +618,9 @@ span.ui-icon {
 	line-height:1.25em;
 	font-size:1em;
 }
+
+.ee-credit-card-year,
+.ee-credit-card-month {
+	width:auto !important;
+	min-width:60px;
+}
